[gd_scene load_steps=4 format=2]

[ext_resource path="res://Util/SexActivityCreator/StageSceneAnimPicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://Util/SexActivityCreator/AnimPickerWithCondition.gd" type="Script" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[node name="AnimPickerWithCondition" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 25.0

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
margin_right = 52.0
margin_bottom = 25.0
text = "Delete"

[node name="UpButton" type="Button" parent="VBoxContainer"]
margin_left = 55.0
margin_right = 68.0
margin_bottom = 25.0
text = "^"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 71.0
margin_top = -1.0
margin_right = 150.4
margin_bottom = 24.4
text = "Condition:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_left = 153.0
margin_right = 1280.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="StageSceneAnimPicker" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 53.0

[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
